<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/tbTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtTitle4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/paid"
                android:textAlignment="viewStart"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTitle1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTitle2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTitle3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textAlignment="textEnd"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/tbContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="4dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <CheckBox
                    android:id="@+id/chCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:textAlignment="textEnd" />
            </FrameLayout>

            <TextView
                android:id="@+id/txtTitleItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxWidth="100dp"
                android:minWidth="100dp"
                android:text="TextView"
                android:textAlignment="textStart"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/txtDesItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxWidth="100dp"
                android:minWidth="100dp"
                android:text="TextView"
                android:textAlignment="viewStart"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/txtAmountItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxWidth="100dp"
                android:minWidth="100dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="@color/primary_text" />

        </TableRow>

    </TableLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>